# demo-github-actions-with-mongodb

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  tests.yml
hello_world/: __init__.py  main.py
tests/: conftest.py  test_e2e.py  test_smoke.py
